[package]
name = "gcrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.4"
clap = { version = "4.1.13", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
nix = { version = "0.26.2", features = ["fs", "user"] }
